--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@steuerbot/node-xmpp-client",
   "version": "0.0.2",
   "description": "TypeScript definitions for https://github.com/node-xmpp/node-xmpp/tree/master/packages/node-xmpp-client.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/steuerbot/nxc-types"
+  },
   "keywords": [
     "xmpp",
     "typescript"
